# mapchat

./: .gitignore  LICENSE.rst  README.rst  pyproject.toml
mapchat/: __init__.py  chat.py  db.py  upload.py
mapchat/agent/: agent.py
mapchat/backends/: chat_history_backend.py  chat_history_schema.sql  drop_location_history_tables.sql  llm_backend.py  location_history_backend.py  location_history_schema.sql  ollama_backend.py
mapchat/static/: style.css
mapchat/templates/: base.html
mapchat/templates/chat/: chat.html
mapchat/templates/upload/: uploadlh.html
tests/: conftest.py  test_db.py  test_factory.py
tests/agent/: test_agent.py
tests/backends/: helpers.py  test_chat_history_backend.py  test_location_history_backend.py  test_ollama_backend.py
tests/backends/assets/: test_lh.txt  test_lh2.txt
